Expand unit tests for services (#413)
* Expanded curriculum, grade, room and teacher service tests

* Student and group service tests

* small fixes from merge

* Expanded server, subject and tag service tests

* More tests for group, student, constraintInstance and curriculum services

* Checkstyle

* undo changes related to immutable lists

* Fixed immutable lessons count

* checkstyle

* fix: permissions

---------

Co-authored-by: Demartino Marco <marcodemartino23@gmail.com>
Co-authored-by: uhkfc <daniel.dietzler@student.kit.edu>