@@ -1,22 +1,30 @@
 package de.uftos.services;
 
 import static de.uftos.utils.ClassCaster.getClassType;
+import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import de.uftos.dto.requestdtos.StudentRequestDto;
+import de.uftos.dto.responsedtos.LessonResponseDto;
+import de.uftos.entities.Lesson;
+import de.uftos.entities.Room;
+import de.uftos.entities.Server;
 import de.uftos.entities.Student;
 import de.uftos.entities.StudentGroup;
 import de.uftos.entities.Tag;
 import de.uftos.repositories.database.ConstraintSignatureRepository;
+import de.uftos.repositories.database.ServerRepository;
 import de.uftos.repositories.database.StudentGroupRepository;
 import de.uftos.repositories.database.StudentRepository;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -37,7 +45,13 @@ import org.springframework.web.server.ResponseStatusException;
 @MockitoSettings(strictness = Strictness.LENIENT)
 public class StudentServiceTest {
   @Mock
+  private StudentGroup groupMock;
+
+  @Mock
   StudentGroupRepository studentGroupRepository;
+
+  @Mock
+  private ServerRepository serverRepository;
 
   @Mock
   private StudentRepository studentRepository;
@@ -53,18 +67,43 @@ public class StudentServiceTest {
     Tag tag = new Tag("", "tagName");
     tag.setId("tagId");
 
-    StudentGroup group = new StudentGroup("group", List.of("123"), List.of(), List.of());
+    StudentGroup group =
+        new StudentGroup("group", new ArrayList<>(List.of("123")), Collections.emptyList(),
+            Collections.emptyList());
     group.setId("groupId");
 
-    Student student = new Student("123", "Max", "Mustermann", List.of(group), List.of(tag));
+    Lesson lesson =
+        new Lesson(0, "teacherId", "groupId", "roomId", "timeslotId", "subjectId", "timetableId",
+            "2024");
+    lesson.setStudentGroup(groupMock);
 
-    when(studentRepository.findAll()).thenReturn(List.of(student));
+    Lesson lessonWrongYear =
+        new Lesson(0, "teacherId", "groupId", "roomId", "timeslotId", "subjectId", "timetableId",
+            "1865");
+    lessonWrongYear.setStudentGroup(groupMock);
+    group.setLessons(new ArrayList<>(List.of(lesson, lessonWrongYear)));
+
+    Student student = new Student("123", "Max", "Mustermann", new ArrayList<>(List.of(groupMock)),
+        new ArrayList<>(List.of(tag)));
+
+    when(groupMock.getGrades()).thenReturn(Collections.emptyList());
+    when(groupMock.getLessons()).thenReturn(new ArrayList<>(List.of(lesson, lessonWrongYear)));
+    when(groupMock.getStudents()).thenReturn(new ArrayList<>(List.of(student)));
+    when(groupMock.getId()).thenReturn("groupId");
+    Server server = new Server(null, "2024", "email");
+    when(serverRepository.findAll()).thenReturn(new ArrayList<>(List.of(server)));
+    when(studentRepository.findAll()).thenReturn(new ArrayList<>(List.of(student)));
     when(studentRepository.findById("123")).thenReturn(Optional.of(student));
-    when(studentRepository.findAllById(List.of("123"))).thenReturn(List.of(student));
+    when(studentRepository.findAllById(new ArrayList<>(List.of("123")))).thenReturn(
+        new ArrayList<>(List.of(student)));
+    when(studentRepository.findAllById(List.of("nonExistentId", "123"))).thenReturn(
+        new ArrayList<>(List.of(student)));
     when(constraintSignatureRepository.findAll(any(Specification.class))).thenReturn(
         Collections.emptyList());
     when(studentGroupRepository.findByStudents(any(Student.class))).thenReturn(
         Collections.emptyList());
+    when(studentGroupRepository.findAll(any(Specification.class))).thenReturn(
+        new ArrayList<>(List.of(groupMock)));
     when(studentRepository.save(any(Student.class))).thenReturn(student);
   }
 
@@ -90,7 +129,7 @@ public class StudentServiceTest {
   @Test
   void createStudent() {
     StudentRequestDto requestDto =
-        new StudentRequestDto("Max", "Mustermann", List.of("tagId"));
+        new StudentRequestDto("Max", "Mustermann", new ArrayList<>(List.of("tagId")));
     studentService.create(requestDto);
 
     ArgumentCaptor<Student> studentCap = ArgumentCaptor.forClass(Student.class);
@@ -109,7 +148,7 @@ public class StudentServiceTest {
   @Test
   void createEmptyFirstNameStudent() {
     StudentRequestDto requestDto = new StudentRequestDto("", "Mustermann",
-        List.of());
+        Collections.emptyList());
     assertThrows(ResponseStatusException.class,
         () -> studentService.create(requestDto));
   }
@@ -117,7 +156,7 @@ public class StudentServiceTest {
   @Test
   void createEmptyLastNameStudent() {
     StudentRequestDto requestDto = new StudentRequestDto("Max", "",
-        List.of());
+        Collections.emptyList());
     assertThrows(ResponseStatusException.class,
         () -> studentService.create(requestDto));
   }
@@ -126,7 +165,7 @@ public class StudentServiceTest {
   void updateStudent() {
     StudentRequestDto requestDto =
         new StudentRequestDto("newFirstName", "newLastName",
-            List.of());
+            Collections.emptyList());
     studentService.update("123", requestDto);
 
     ArgumentCaptor<Student> studentCap = ArgumentCaptor.forClass(Student.class);
@@ -144,7 +183,7 @@ public class StudentServiceTest {
   @Test
   void updateEmptyFirstNameStudent() {
     StudentRequestDto requestDto = new StudentRequestDto("", "Mustermann",
-        List.of());
+        Collections.emptyList());
     assertThrows(ResponseStatusException.class,
         () -> studentService.update("123", requestDto));
   }
@@ -152,7 +191,7 @@ public class StudentServiceTest {
   @Test
   void updateEmptyLastNameStudent() {
     StudentRequestDto requestDto = new StudentRequestDto("Max", "",
-        List.of());
+        Collections.emptyList());
     assertThrows(ResponseStatusException.class,
         () -> studentService.update("123", requestDto));
   }
@@ -174,4 +213,38 @@ public class StudentServiceTest {
     assertThrows(ResponseStatusException.class,
         () -> studentService.deleteStudents(new String[] {"nonExistentId"}));
   }
+
+  @Test
+  void deleteStudentsSomeExistent() {
+    assertThrows(ResponseStatusException.class,
+        () -> studentService.deleteStudents(new String[] {"nonExistentId", "123"}));
+  }
+
+  @Test
+  void lessonsById() {
+    LessonResponseDto result = studentService.getLessonsById("123");
+    assertResultArraySizes(result, 1, 1, 1, 0);
+    assertAll("Testing whether the sizes of the arrays are correct",
+        () -> assertEquals(1, result.groups().size()),
+        () -> assertEquals(1, result.groups().getFirst().students().size()),
+        () -> assertEquals("groupId", result.groups().getFirst().id())
+    );
+
+    List<String> roomIds = result.rooms().stream().map(Room::getId).toList();
+    assertAll("Testing whether all the rooms are there",
+        () -> assertEquals(1, roomIds.size()),
+        () -> assertTrue(roomIds.contains("roomId"))
+    );
+  }
+
+  private void assertResultArraySizes(LessonResponseDto result, int teachers, int lessons,
+                                      int rooms, int grades) {
+    assertAll("Testing whether the sizes of the arrays are correct",
+        () -> assertEquals(teachers, result.teachers().size()),
+        () -> assertEquals(lessons, result.lessons().size()),
+        () -> assertEquals(rooms, result.rooms().size()),
+        () -> assertEquals(grades, result.grades().size())
+    );
+  }
+
 }
